crates/jsonschema-codegen/tests/ui/invalid_email_options_key.rs
#[jsonschema::validator(
    schema = r#"{"type":"string","format":"email"}"#,
    email_options = {
        unknown = true,
    }
)]
struct InvalidEmailOptionsKey;

fn main() {}
